; ModuleID = '/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_view.c_CG_DrawCustomView.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_view.c_CG_DrawCustomView.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__, i32, i32, %struct.TYPE_5__* }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i32 }

@cg = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@SNAPFLAG_NOT_ACTIVE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CG_DrawCustomView() #0 {
  %1 = call i32 (...) @trap_R_ClearScene()
  %2 = load %struct.TYPE_5__*, %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @cg, i32 0, i32 3), align 8
  %3 = icmp ne %struct.TYPE_5__* %2, null
  br i1 %3, label %4, label %11

4:                                                ; preds = %0
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @cg, i32 0, i32 3), align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @SNAPFLAG_NOT_ACTIVE, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %4, %0
  br label %20

12:                                               ; preds = %4
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @cg, i32 0, i32 2), align 8
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @cg, i32 0, i32 0, i32 0), align 8
  %14 = call i32 @dmlab_custom_view(%struct.TYPE_6__* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @cg, i32 0, i32 0))
  store i32 %14, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @cg, i32 0, i32 1), align 4
  %15 = call i32 (...) @CG_AddPacketEntities()
  %16 = call i32 (...) @CG_AddMarks()
  %17 = call i32 (...) @CG_AddParticles()
  %18 = call i32 (...) @CG_AddLocalEntities()
  %19 = call i32 @trap_R_RenderScene(%struct.TYPE_6__* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @cg, i32 0, i32 0))
  br label %20

20:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @trap_R_ClearScene(...) #1

declare dso_local i32 @dmlab_custom_view(%struct.TYPE_6__*) #1

declare dso_local i32 @CG_AddPacketEntities(...) #1

declare dso_local i32 @CG_AddMarks(...) #1

declare dso_local i32 @CG_AddParticles(...) #1

declare dso_local i32 @CG_AddLocalEntities(...) #1

declare dso_local i32 @trap_R_RenderScene(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
